################################################################################
#                                                                               
#  Copyright (C) 2011 Fabien Bouleau
#
#  This file is part of LTCPPUNIT.
#
# LTCPPUNIT is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# LTCPPUNIT is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with LTCPPUNIT. If not, see <http://www.gnu.org/licenses/>.
#
################################################################################

AC_INIT([LTCPPUNIT], [1.0], [])
AM_INIT_AUTOMAKE([1.9 tar-pax -Wall -Werror])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
CXXFLAGS=

AM_PROG_AR
LT_INIT
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_STDC
AC_LANG_CPLUSPLUS

AC_CONFIG_FILES([
    Makefile
    src/Makefile
])

AC_OUTPUT()

