###################################################################################
##
##  Copyright (C) 2011 Fabien Bouleau
##
##  This file is part of LTCPPUNIT.
##
## LTCPPUNIT is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## LTCPPUNIT is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with LTCPPUNIT. If not, see <http://www.gnu.org/licenses/>.
##
###################################################################################

lib_LTLIBRARIES = libltcppunit-1.0.la

AM_CPPFLAGS = -I$(top_srcdir)/include/

libltcppunit_1_0_la_SOURCES = \
	ltcppunit.cc

nobase_include_HEADERS = \
	../include/ltcppunit/ltcppunit.h \
	../include/ltcppunit/common.h
